k8s/api1/api1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api1
spec:
  selector:
    app: api1
  ports:
  - port: 80
    targetPort: 8080
