k8s/api1/api1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api1-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: api1.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api1
                port:
                  number: 80
